# dict-fr-AU-DELA

./: FORMAT.fr.md  Makefile  README.md  nettoyer-lignes_en_doublon.sh  setup.cfg
data/: dict-fr-AU-DELA-License  eclater.sh  nettoyer-lignes_a_factoriser.sh  nettoyer-lignes_en_doublon.sh  rassembler.sh
data/expressions/: 0  a  b  c  d  e  f  g  h  i  j  k  l  m  n  o  p  p1  p2  q  r  s  t  u  v  w  x  y  z
data/mots/: 0  a  a1  a2  a3  b  b1  b2  c  c1  c2  c3  d  d1  d2  e  f  g  h  i  j  k  l  m  m1  m2  n  o  p  p1  p2  p3  q  r  r1  r2  s  s1  s2  t  (+8 more)
data/noms/: a  b  c  d  e  f  g  h  i  j  k  l  m  n  o  p  q  r  s  t  u  v
data/verbes/: 0  01  02  a  a1  a2  a3  a4  b  b1  b2  b3  c  c1  c2  c3  c4  d  d1  d2  d3  d4  d5  d6  d7  e  e1  e2  e3  f  f1  f2  g  g1  g2  h  i  i1  i2  j  (+36 more)
