[metadata]
name = dict-fr-AU-DELA
description = EDITABLE French dictionaries from Laboratoire d'Automatique Documentaire et Linguistique (LADL)
long_description = file: README.md
long_description_content_type = text/markdown
version = 2021.9.4
license = LGPLLR
license_files = data/dict-fr-AU-DELA-License
author = Hubert Tournier
author_email = nobody@nowhere.invalid
url = https://github.com/HubTou/dict-fr-AU-DELA/
project_urls =
    Bug Tracker = https://github.com/HubTou/dict-fr-AU-DELA/issues
keywords = pnu-project, dictionary
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: Other/Proprietary License
    Natural Language :: French
    Operating System :: OS Independent
    Topic :: Text Processing
    Topic :: Text Processing :: Linguistic

[options]
package_dir =
packages = find:
python_requires = >=3.0

[options.packages.find]
where = src

[options.data_files]
share/dict = 
    data/dict-fr-AU-DELA
    data/dict-fr-AU-DELA-common-compound_words.ascii
    data/dict-fr-AU-DELA-common-compound_words.combined
    data/dict-fr-AU-DELA-common-compound_words.unicode
    data/dict-fr-AU-DELA-common-words.ascii
    data/dict-fr-AU-DELA-common-words.combined
    data/dict-fr-AU-DELA-common-words.unicode
    data/dict-fr-AU-DELA-License
    data/dict-fr-AU-DELA-proper_nouns.ascii
    data/dict-fr-AU-DELA-proper_nouns.combined
    data/dict-fr-AU-DELA-proper_nouns.unicode
    data/dict-fr-AU-DELA.ascii
    data/dict-fr-AU-DELA.combined
    data/dict-fr-AU-DELA.unicode

